<resources>
    <string name="app_name">Грядка</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>

    <string-array name="titles">
        <item>Овощи</item>
        <item>Фрукты</item>
        <item>Разное</item>
        <item>Корзина</item>
        <item>Заказы</item>
        <item>Выйти</item>
    </string-array>

<!--    <string-array name="vegetables">-->
<!--        <item>Картофель</item>-->
<!--        <item>Помидор</item>-->
<!--        <item>Морковь</item>-->
<!--        <item>Кукуруза</item>-->
<!--        <item>Тыква</item>-->
<!--    </string-array>-->

<!--    <string-array name="fruits">-->
<!--        <item>Яблоко</item>-->
<!--        <item>Ананас</item>-->
<!--        <item>Арбуз</item>-->
<!--        <item>Банан</item>-->
<!--        <item>Апельсин</item>-->
<!--    </string-array>-->

<!--    <string-array name="other">-->
<!--        <item>Kружка</item>-->
<!--        <item>Корзина</item>-->
<!--        <item>Клавиатура</item>-->
<!--        <item>Компьютер</item>-->
<!--        <item>Телевизор</item>-->
<!--    </string-array>-->

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="enter_your_phone">Введите свой телефон</string>
    <string name="enter_your_password">Введите свой пароль</string>
    <string name="add_to_cart">В корзину</string>
    <string name="delete">Удалить</string>
    <string name="make_order">Сделать заказ</string>

</resources>
