<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/filledTextField1"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="64dp"-->
<!--        android:hint="Enter something"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
<!--        &lt;!&ndash;this is the actual edit text which takes the input&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/editName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/filledTextField2"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="145dp"-->
<!--        android:hint="Enter something"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
<!--        &lt;!&ndash;this is the actual edit text which takes the input&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/editPhone"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/filledTextField3"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="250dp"-->
<!--        android:hint="Enter something"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
<!--        &lt;!&ndash;this is the actual edit text which takes the input&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/editPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

        <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:layout_marginBottom="26dp"
        android:hint="@string/enter_your_name"
        app:layout_constraintBottom_toTopOf="@+id/editPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
           />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="33dp"
        android:hint="@string/enter_your_phone"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="130dp"
        android:hint="@string/enter_your_password"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:layout_weight="1"
        android:background="@drawable/signup"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:buttonColor="#435211"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>